feat(view-javafx): :sparkles: adicionado javaFx ao projeto